--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
 
@@ -11,10 +12,22 @@
         }
     </style>
 </head>
+
 <body class="bg-black">
     <div>
         <h1 id="title" class="heading">DOM Learning on Chai aur code <span style="display: none;">test text</span></h1>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
+        </ul>
     </div>
     <script>
         // console.log(window)
@@ -26,15 +39,18 @@
         // console.log(document.links[2]) // get 2 link
         // document.getElementById('id_name')
         // document.getElementById('id_name').innerHTML="<h1>HELLO WORLD</h1>"
-        
 
-        //get element attribute value
+
+        //get element by id attribute value
         // document.getElementById('title')
         // document.getElementById('title').id
         // document.getElementById('title').class //Not work
         // document.getElementById('title').className
         // document.getElementById('title').getAttribute('id')
         // document.getElementById('title').getAttribute('class')
+
+        //get element by classname
+        // document.getElementsByClassName('heading');
 
         //set element attribute with value
         // document.getElementById('title').setAttribute('myattr','myvalue') // => set attribute myattr to title element
@@ -48,10 +64,62 @@
         // title.style.borderRadius = '20px';  // => set border radius of 20px
 
         //get text
-        // title.textContent  // => get text content of element without tags full text which do not support tags
+        // title.textContent  // => get text content of element without tags full text which hide using css js
         // title.innerHTML // => get text content of element with tags inside which support tags
         // title.innerText // => get text content of element which see on browser which do not support tags
-        
+
+        //most used fo selector
+        // document.querySelector('h1') //select first h1 on document
+        // document.querySelector('h2') //select first h2 on document
+        // document.querySelector('#title') //select by id act as same as jQuery
+        // document.querySelector('.heading') //select by class
+        // document.querySelector('input') // for first input select
+        // document.querySelector('input[type="password"]') // for input with attribute
+        // document.querySelector('p:first-child')
+
+        // const turnGreen = document.querySelector('ul>li');
+        // turnGreen.style.backgroundColor = "green";
+        // turnGreen.style.padding = '10px';
+        //or
+        // const myul = document.querySelector('ul');
+        // const turnGreen = myul.querySelector('li');
+        // turnGreen.style.backgroundColor = 'green';
+        // turnGreen.style.padding = '10px';
+        // turnGreen.innerText;
+        // turnGreen.innerText = 'five';
+
+        //document.querySelectorAll('li')  // => provide nodelist
+
+        //note:-
+        //notelist & htmlcollection are not pure array
+
+        // const tempLiList = document.querySelectorAll('li') //node list
+        // tempLiList.style.color = 'green'; // not working 
+        // tempLiList[0].style.color = 'green'; //working
+        // tempLiList.forEach((l) => {
+        //     l.style.backgroundColor = 'cyan'
+        // });
+
+        // const myH1 = document.querySelectorAll('h1') //node list evev though single element
+        // myH1.style.color = 'green'; // not working
+        // myH1[0].style.color = 'green'; //working
+
+        //htmlcollection
+        // document.getElementsByClassName('list-item');
+        //const tempClassList = document.getElementsByClassName('list-item');
+        // tempClassList.forEach(function(li) { 
+        //     console.log(li)
+        // })
+        // not working
+
+
+        //convert html collection to array
+        // Array.from(tempClassList);
+        // nArr.forEach(function (l) {
+        //     l.style.color = 'green';
+        // });
+
     </script>
 </body>
+
 </html>
